feat(ui): Add wikitext export format to Text Extractor and Pointer Scanner
Text Extractor:
- Added wikitext export option (*.wikitext, *.wiki)
- Exports as sortable wiki table with hex addresses
- Added EscapeWikitext() helper for special characters

Pointer Scanner:
- Converted ExportResults to async ExportResultsAsync
- Added file dialog for saving exports
- Added wikitext export format with sortable table
- View updated to pass Window parameter for dialogs

File Dialog Service:
- Added WikitextFiles filter (*.wikitext, *.wiki, *.txt)

--- a/src/GameInfoTools.UI/Views/PointerScannerView.axaml
+++ b/src/GameInfoTools.UI/Views/PointerScannerView.axaml
@@ -17,7 +17,9 @@
 			<Button Content="Scan" Command="{Binding ScanCommand}" ToolTip.Tip="Scan for pointer tables"/>
 			<Button Content="Scan Range..." Command="{Binding ScanRangeCommand}" ToolTip.Tip="Scan specific range"/>
 			<Separator/>
-			<Button Content="Export..." Command="{Binding ExportCommand}" ToolTip.Tip="Export pointer table"/>
+			<Button Content="Export..." Command="{Binding ExportCommand}"
+					CommandParameter="{Binding $parent[Window]}"
+					ToolTip.Tip="Export pointer tables (txt/wikitext)"/>
 			<Separator/>
 			<TextBlock Text="Format:" VerticalAlignment="Center"/>
 			<ComboBox ItemsSource="{Binding PointerFormats}" SelectedItem="{Binding SelectedFormat}" Width="120"/>
