feat(ui): Add copy to clipboard with wikitext/markdown/JSON formats to ROM Info
- Add CopyAsWikitext, CopyAsMarkdown, CopyAsJson, CopyAsText commands
- Generate Data Crystal compatible wikitext tables
- Generate Markdown tables for documentation
- Add SplitButton with format options to RomInfoView

--- a/src/GameInfoTools.UI/Views/RomInfoView.axaml
+++ b/src/GameInfoTools.UI/Views/RomInfoView.axaml
@@ -67,7 +67,19 @@
 				<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Sha1}" IsReadOnly="True" Margin="0,4"/>
 			</Grid>
 
-			<Button Content="Refresh" Command="{Binding RefreshCommand}" HorizontalAlignment="Left"/>
+			<StackPanel Orientation="Horizontal" Spacing="8">
+				<Button Content="Refresh" Command="{Binding RefreshCommand}"/>
+				<SplitButton Content="Copy" Command="{Binding CopyAsWikitextCommand}" IsEnabled="{Binding HasRomLoaded}">
+					<SplitButton.Flyout>
+						<MenuFlyout Placement="Bottom">
+							<MenuItem Header="Copy as Wikitext" Command="{Binding CopyAsWikitextCommand}"/>
+							<MenuItem Header="Copy as Markdown" Command="{Binding CopyAsMarkdownCommand}"/>
+							<MenuItem Header="Copy as JSON" Command="{Binding CopyAsJsonCommand}"/>
+							<MenuItem Header="Copy as Plain Text" Command="{Binding CopyAsTextCommand}"/>
+						</MenuFlyout>
+					</SplitButton.Flyout>
+				</SplitButton>
+			</StackPanel>
 		</StackPanel>
 	</ScrollViewer>
 </UserControl>
