feat(ui): Add wikitext/text copy to Disassembler and Checksum tools
- Disassembler: Add CopyAsWikitext, CopyAsAsm for documentation
- Checksum: Add CopyAsWikitext, CopyAsText for Data Crystal wiki
- Both tools now have SplitButton with format options
- Actually implement clipboard access (was previously stub)

--- a/src/GameInfoTools.UI/Views/ChecksumView.axaml
+++ b/src/GameInfoTools.UI/Views/ChecksumView.axaml
@@ -71,6 +71,14 @@
 			<StackPanel Orientation="Horizontal" Spacing="8">
 				<Button Content="Recalculate All" Command="{Binding CalculateChecksumsCommand}"/>
 				<Button Content="Fix Checksum" Command="{Binding FixChecksumCommand}"/>
+				<SplitButton Content="Copy" Command="{Binding CopyAsWikitextCommand}" IsEnabled="{Binding HasRomLoaded}">
+					<SplitButton.Flyout>
+						<MenuFlyout Placement="Bottom">
+							<MenuItem Header="Copy as Wikitext" Command="{Binding CopyAsWikitextCommand}"/>
+							<MenuItem Header="Copy as Plain Text" Command="{Binding CopyAsTextCommand}"/>
+						</MenuFlyout>
+					</SplitButton.Flyout>
+				</SplitButton>
 			</StackPanel>
 		</StackPanel>
 	</ScrollViewer>
